Began adding the angular functionality to change values when answering questions.

--- a/jade/extends/header.jade
+++ b/jade/extends/header.jade
@@ -2,5 +2,5 @@ doctype html
 
 html
 	head
-		title Boilerplate file!
+		title Eevee Quiz!
 		link(href='assets/css/style.min.css', rel='stylesheet')
