--- a/jade/index.jade
+++ b/jade/index.jade
@@ -3,7 +3,7 @@ include extends/header.jade
 body(ng-app="eeveeApp", ng-controller="quizData")
 	h1 Welcome to the Eevee quiz!
 	h5 Don't forget Github link!
-	h6 Also a way to tweet/share results?
+	h6 Also a way to tweet/share results??
 
 	fieldset(ng-show="!quizOver")
 		form
