--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -10,25 +10,10 @@ body {
 }
 
 .results {
-	@include outer-container;
-	@include margin(1em 0);
+	display: flex;
+	flex-wrap: wrap;
 
 	.eevee-result {
-		@include span-columns(1 of 1);
-		@include pad(.5em);		
-	}
-
-	@include media($tablet-screen) {
-		@include fill-parent();
-		@include row(table);
-		
-		.eevee-result {
-			@include span-columns(1 of 3);
-			margin-right: 0px;
-			
-			&:nth-of-type(3n) {
-				@include reset-display;
-			}
-		}
+		flex: 1 0 11em;
 	}
 }
