Improved parallax and results layouts and Sass

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,39 +1,39 @@
 $eeveelutions: (
 
-	Eevee-bg: red,
-	Eevee-text: blue,
+	Eevee-bg: white,
+	Eevee-text: brown,
 	Eevee-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
-	Vaporeon-bg: purple,
-	Vaporeon-text: green,
-	Vaporeon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+	Vaporeon-bg: blue,
+	Vaporeon-text: blue,
+	Vaporeon-pic: "http://www.dltk-kids.com/pokemon/adoptions/134.gif",
 
-	Jolteon-bg: red,
-	Jolteon-text: blue,
+	Jolteon-bg: yellow,
+	Jolteon-text: yellow,
 	Jolteon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
 	Flareon-bg: red,
-	Flareon-text: blue,
+	Flareon-text:red,
 	Flareon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
-	Espeon-bg: red,
-	Espeon-text: blue,
+	Espeon-bg: purple,
+	Espeon-text: purple,
 	Espeon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
-	Umbreon-bg: red,
-	Umbreon-text: blue,
+	Umbreon-bg: gray,
+	Umbreon-text: black,
 	Umbreon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
-	Leafeon-bg: red,
-	Leafeon-text: blue,
+	Leafeon-bg: green,
+	Leafeon-text: green,
 	Leafeon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
-	Glaceon-bg: red,
-	Glaceon-text: blue,
+	Glaceon-bg: turquoise,
+	Glaceon-text: turquoise,
 	Glaceon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
 
-	Slyveon-bg: red,
-	Sylveon-text: blue,
+	Sylveon-bg: pink,
+	Sylveon-text: pink,
 	Sylveon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png"
 );
 
