--- a/sass/partials/_parallax.scss
+++ b/sass/partials/_parallax.scss
@@ -14,4 +14,8 @@ $parallax-background-height: 30em;
   padding: 8em 0;
   position: relative;
   z-index: 9;
+
+  @include media($mobile-h-screen) {
+  	width: 75%;
+  }
 }
