--- a/jade/index.jade
+++ b/jade/index.jade
@@ -24,7 +24,7 @@ body(ng-app="eeveeApp", ng-controller="quizData")
 		
 		div.eevee-result(class="{{result.name}}-resultBox", ng-repeat="result in results | orderBy:'-value'")
 			h5 {{result.name}}
-			p {{result.type}}
-			p {{result.value}}
+			p The {{result.type}} Type!
+			p You scored {{result.value}} of {{totalPoints}}
 
 include extends/footer.jade
