Updated the file structure with Plately

--- a/sass/components/_parallax.scss
+++ b/sass/components/_parallax.scss
@@ -15,7 +15,7 @@ $parallax-background-height: 30em;
   position: relative;
   z-index: 9;
 
-  @include media($mobile-h-screen) {
+  @include media(breakpoint(mobile-h)) {
   	width: 75%;
   }
 }
