Fixed general layout for the winning result box

--- a/jade/extends/header.jade
+++ b/jade/extends/header.jade
@@ -2,5 +2,5 @@ doctype html
 
 html
 	head
-		title Plately
+		title Which Eeveelution Are You?
 		link(href='assets/css/style.min.css', rel='stylesheet')
