--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,7 +25,8 @@
   'components/forms',
   'components/lists',
   'components/pre',
-  'components/parallax';
+  'components/parallax',
+  'components/buttons';
 
 @import
   'pages/home',
