--- a/jade/index.jade
+++ b/jade/index.jade
@@ -17,9 +17,10 @@ body(ng-app="eeveeApp", ng-controller="quizData")
 				button(ng-click="answer(question.selected)") Answer here!
 
 	.results(ng-show="!quizOver")
-		#js-parallax-window.parallax-window(ng-repeat="result in results | orderBy:'-value' | limitTo:1")
-			.parallax-static-content(class="{{result.name}}-static")
+		#js-parallax-window.parallax-window(class="{{result.name}}-static", ng-repeat="result in results | orderBy:'-value' | limitTo:1")
+			.parallax-static-content
 				h2 The winner is {{result.name}}!
+				p {{result.description}}
 			#js-parallax-background.parallax-background(class="{{result.name}}-parallax")
 		
 		div.eevee-result(class="{{result.name}}-resultBox", ng-repeat="result in results | orderBy:'-value'")
