--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -213,37 +213,37 @@ $eeveelutions: (
 
   Eevee-bg: brown,
   Eevee-text: brown,
-  Eevee-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Eevee-pic: "http://cdn.playbuzz.com/cdn/52fa385f-efb7-4e00-b872-b7254fc45dcb/18be15f5-2f80-4bea-8b3c-cf8168da4df8.png",
 
   Vaporeon-bg: blue,
   Vaporeon-text: blue,
-  Vaporeon-pic: "http://www.dltk-kids.com/pokemon/adoptions/134.gif",
+  Vaporeon-pic: "http://img1.wikia.nocookie.net/__cb20130529163942/adventuretimewithfinnandjake/images/1/18/Dw_vaporeon.png",
 
   Jolteon-bg: yellow,
   Jolteon-text: yellow,
-  Jolteon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Jolteon-pic: "http://pldh.net/media/dreamworld/135.png",
 
   Flareon-bg: red,
-  Flareon-text:red,
-  Flareon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Flareon-text: red,
+  Flareon-pic: "http://static.comicvine.com/uploads/original/6/65659/1269269-flareon_fla.png",
 
   Espeon-bg: purple,
   Espeon-text: purple,
-  Espeon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Espeon-pic: "http://img06.deviantart.net/7d35/i/2013/353/5/1/elegant_espeon_by_red_flare-d6yl7wb.png",
 
   Umbreon-bg: gray,
   Umbreon-text: black,
-  Umbreon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Umbreon-pic: "https://lh6.googleusercontent.com/-tQ2H8rMbuAI/U1Q0YH5BoQI/AAAAAAAAB0g/1W_FkuoXTfY/w1900-h1904/Uncle%2BKenny%2527s%2Bfirst%2BUmbreon%2Bvector%25402x.png",
 
   Leafeon-bg: green,
   Leafeon-text: green,
-  Leafeon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Leafeon-pic: "http://img00.deviantart.net/9046/i/2013/236/b/9/phyllali___leafeon_by_yonaka_pinku-d6jifwk.png",
 
   Glaceon-bg: turquoise,
   Glaceon-text: turquoise,
-  Glaceon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png",
+  Glaceon-pic: "http://pre09.deviantart.net/9976/th/pre/f/2012/252/1/1/glaceon___shiny_version_by_kizarin-d5e3wht.png",
 
   Sylveon-bg: pink,
   Sylveon-text: pink,
-  Sylveon-pic: "http://img2.wikia.nocookie.net/__cb20140810044703/pokemon/images/c/ce/133Eevee_BW_anime.png"
+  Sylveon-pic: "https://lh3.googleusercontent.com/-NOiZPtUCkW0/VeM6R0WWIYI/AAAAAAAAI4c/rKHX4ORxUng/w606-h752/sylveon_by_niekkk-d5v9ii4.png"
 );
