--- a/jade/extends/app/questions.jade
+++ b/jade/extends/app/questions.jade
@@ -1,10 +1,15 @@
-fieldset(ng-show="!quizOver")
+.questions(ng-show="!quizOver")
+	fieldset
 		form
-			.question-1(ng-repeat="question in questions | filter:isStatus")
-				h4 Question {{question.number}}: {{question.question}}
+			.question(ng-repeat="question in questions | filter:isStatus")
+				h3 Question {{question.number}}
+				h5 {{question.question}}
 				
 				div(ng-repeat="answer in question.answers")
 					input(type="radio", name="question-{{question.number}}", value="{{answer.index}}", ng-model="question.selected")
 					|	{{answer.text}}
 					br
-				button(ng-click="answer(question.selected)") {{button}}
+				button.right(ng-click="answer(question.selected)") {{button}}
+
+	.progress-bar
+		span.meter(style="width: {{ (idr/QLeft) * 100 | number : 0 }}%")
