--- a/sass/components/_progress-bar.scss
+++ b/sass/components/_progress-bar.scss
@@ -20,6 +20,7 @@
   margin: 0 auto;
   padding: 2px;
   width: 100%;
+  margin-bottom: $progress-height;
 
   > span.meter {
     @include animation(progress $progress-animation-duration linear infinite);
