Added a changing progress bar message

--- a/jade/extends/app/questions.jade
+++ b/jade/extends/app/questions.jade
@@ -1,4 +1,5 @@
 .questions(ng-show="!quizOver")
+	h5 {{progress}}
 	.progress-bar
 		span.meter(style="width: {{ (idr/QLeft) * 100 | number : 0 }}%")
 
