--- a/jade/extends/app/intro.jade
+++ b/jade/extends/app/intro.jade
@@ -1,2 +1,7 @@
-h2 The quiz hasn't started yet!
+h1 Welcome to the Eevee quiz!
+h5 Don't forget Github link!
+h6 Also a way to tweet/share results??
+
+img(src="assets/img/eeveelutions.png")
+
 button(ng-click="quizBegin = true") Start the quiz!
