Added fix-flex to show questions without overlapping inputs

--- a/sass/pages/_questions.scss
+++ b/sass/pages/_questions.scss
@@ -6,4 +6,14 @@
 
 .answer {
 	padding: .25em .5em;
+	padding-left: 7.5%;
+	@include fix-flex('left', 1em, 2em);
+
+	input {
+		
+		@include media(breakpoint(tablet)) {
+			margin-top: .4em;
+		}
+	}
 }
+
