--- a/sass/components/_progress-bar.scss
+++ b/sass/components/_progress-bar.scss
@@ -24,7 +24,7 @@
 
   > span.meter {
     @include animation(progress $progress-animation-duration linear infinite);
-    @include box-sizing(border-box);
+    box-sizing: border-box;
     background-color: $progress-meter-color;
     @include background-image(linear-gradient(-45deg, rgba(255,255,255, 0.15) 25%,
                                                       transparent 25%,
