--- a/jade/extends/app/intro.jade
+++ b/jade/extends/app/intro.jade
@@ -4,4 +4,4 @@ h6 Also a way to tweet/share results??
 
 img(src="assets/img/eeveelutions.png")
 
-button(ng-click="triggers.quizBegin = true") Start the quiz!
+button(ng-click="view.quizBegin = true") Start the quiz!
