Made intro image full width

--- a/jade/extends/app/intro.jade
+++ b/jade/extends/app/intro.jade
@@ -2,6 +2,6 @@ h1 Welcome to the Eevee quiz!
 h5 Don't forget Github link!
 h6 Also a way to tweet/share results??
 
-img(src="assets/img/eeveelutions.png")
+img(src="assets/img/eeveelutions.png").full
 
 button(ng-click="view.quizBegin = true") Start the quiz!
