--- a/jade/extends/app/results.jade
+++ b/jade/extends/app/results.jade
@@ -10,4 +10,4 @@
 	div.eevee-result(class="{{result.name}}-resultBox", ng-repeat="result in results | orderBy:'-value'")
 		h4 {{result.name}}
 		p The {{result.type}} Type!
-		p You scored {{ (result.value/q.totalPoints) * 100 | number : 0}}%
+		p You scored {{ (result.value/q.left) * 100 | number : 0}}%
