--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -207,7 +207,7 @@ $base-duration: 150ms;
 $base-timing: ease;
 
 
-/// These are eeveelution-specific variables, such as background color, text color, and picture for the results. They're looped through to generate the result styles in the pages/results stylesheet.
+/// These are eeveelution-specific variables, such as background color and text color for the results. They're looped through to generate the result styles in the pages/results stylesheet.
 /// @type Map
 /// @group Eevees
 /// @see eeveelution
@@ -215,37 +215,28 @@ $eeveelutions: (
 
   Eevee-bg: #F3E4BD,
   Eevee-text: #C99353,
-  Eevee-pic: "http://cdn.playbuzz.com/cdn/52fa385f-efb7-4e00-b872-b7254fc45dcb/18be15f5-2f80-4bea-8b3c-cf8168da4df8.png",
 
   Vaporeon-bg: #5DC1CF,
   Vaporeon-text: #005589,
-  Vaporeon-pic: "http://img1.wikia.nocookie.net/__cb20130529163942/adventuretimewithfinnandjake/images/1/18/Dw_vaporeon.png",
 
   Jolteon-bg: #D9B200,
   Jolteon-text: white,
-  Jolteon-pic: "http://pldh.net/media/dreamworld/135.png",
 
   Flareon-bg: #EDF75A,
   Flareon-text: #FB5A45,
-  Flareon-pic: "http://static.comicvine.com/uploads/original/6/65659/1269269-flareon_fla.png",
 
   Espeon-bg: #F4D5ED,
   Espeon-text: #5684AB,
-  Espeon-pic: "http://img06.deviantart.net/7d35/i/2013/353/5/1/elegant_espeon_by_red_flare-d6yl7wb.png",
 
   Umbreon-bg: #343434,
   Umbreon-text: #EDA32A,
-  Umbreon-pic: "https://lh6.googleusercontent.com/-tQ2H8rMbuAI/U1Q0YH5BoQI/AAAAAAAAB0g/1W_FkuoXTfY/w1900-h1904/Uncle%2BKenny%2527s%2Bfirst%2BUmbreon%2Bvector%25402x.png",
 
   Leafeon-bg: #74B78C,
   Leafeon-text: #FEF5D0,
-  Leafeon-pic: "http://img00.deviantart.net/9046/i/2013/236/b/9/phyllali___leafeon_by_yonaka_pinku-d6jifwk.png",
 
   Glaceon-bg: #206FB0,
   Glaceon-text: #EAFEFE,
-  Glaceon-pic: "http://pre09.deviantart.net/9976/th/pre/f/2012/252/1/1/glaceon___shiny_version_by_kizarin-d5e3wht.png",
 
   Sylveon-bg: #FBFCFE,
-  Sylveon-text: #F19BAE,
-  Sylveon-pic: "https://lh3.googleusercontent.com/-NOiZPtUCkW0/VeM6R0WWIYI/AAAAAAAAI4c/rKHX4ORxUng/w606-h752/sylveon_by_niekkk-d5v9ii4.png"
+  Sylveon-text: #F19BAE
 );
